--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Xray Web Crawler",
+  "name": "Extract xray images from any url",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "16x32 32x32",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "logo140.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "140x215"
     },
     {
-      "src": "logo512.png",
+      "src": "logo560.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "560x862"
     }
   ],
   "start_url": ".",
